Updated Project Added account system

--- a/DevForm/DevFormAz/DevFormAz/Views/Shared/_LayoutWithoutHeaderFooter.cshtml
+++ b/DevForm/DevFormAz/DevFormAz/Views/Shared/_LayoutWithoutHeaderFooter.cshtml
@@ -40,6 +40,7 @@
     <script src="~/Public/OwlCarousel/owl.carousel.min.js"></script>
     <script src="~/Public/Bootstrap/js/bootstrap.min.js"></script>
     <script src="~/Public/Script/MainScript.js"></script>
+    @RenderSection("scripts", false)
     <!-- End Scripts Section -->
 </body>
 
