--- a/DevForm/DevFormAz/DevFormAz/Views/Account/Login.cshtml
+++ b/DevForm/DevFormAz/DevFormAz/Views/Account/Login.cshtml
@@ -12,6 +12,14 @@
                         <h3>Daxil ol</h3>
                         <hr>
                     </div>
+                    @if (ViewBag.EmailSend != "" && ViewBag.EmailSend != null)
+                    {
+                        <div class="col-md-12 col-12">
+                            <div class="alert alert-success" role="alert">
+                                @ViewBag.LoginMsg
+                            </div>
+                        </div>
+                    }
                     <div class="col-md-12 col-12">
                         <div class="logWithOtherSocial mb-4">
                             <div class=" socialFace mr-5">
@@ -23,14 +31,15 @@
                         </div>
                     </div>
                     <div class="col-md-12 col-12">
-                        <form action="#" method="#">
+                        <form action="/Account/Login" method="Post">
+                            @Html.AntiForgeryToken()
                             <div class="inputBox mb-3">
                                 <i class="fas fa-envelope mr-3"></i>
-                                <input placeholder="Email" type="email">
+                                <input placeholder="Email" type="email" name="email">
                             </div>
                             <div class="inputBox mb-3">
                                 <i class="fas fa-lock mr-3"></i>
-                                <input placeholder="Şifrə" type="password">
+                                <input placeholder="Şifrə" type="password" name="password">
                             </div>
 
                             <div class="inputBox submitBox mb-3">
