--- a/DevForm/DevFormAz/DevFormAz/Views/Account/Register.cshtml
+++ b/DevForm/DevFormAz/DevFormAz/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model DevFormAz.Models.User
 @{
     Layout = "~/Views/Shared/_LayoutWithoutHeaderFooter.cshtml";
     ViewBag.Title = "Qeydiyyat";
@@ -15,20 +15,29 @@
                 <hr>
             </div>
             <div class="col-md-12">
-                <form action="#" method="#">
+                <form id="devRegForm" action="/Account/Register" method="post">
+                    @Html.AntiForgeryToken()
+
+                    <div id="devRegFormValidate"  class="alert alert-primary" role="alert">
+                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger d-block" })
+                        @Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "text-danger d-block" })
+                        @Html.ValidationMessageFor(m => m.Lastname, "", new { @class = "text-danger d-block" })
+                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger d-block" })
+                    </div>
+                   
                     <div class="inputBox mb-3">
                         <i class="fas fa-envelope mr-3"></i>
-                        <input placeholder="Email" type="email">
+                        <input placeholder="Email" type="email" name="email">
                     </div>
 
                     <div class="inputBox ">
                         <i class="fas fa-id-card mr-3"></i>
                         <div class="userInfoGroup">
                             <div class=" mb-3">
-                                <input placeholder="Ad" type="text">
+                                <input placeholder="Ad" type="text" name="firstname">
                             </div>
                             <div class=" mb-3">
-                                <input placeholder="Soyad" type="text">
+                                <input placeholder="Soyad" type="text" name="lastname">
                             </div>
                         </div>
 
@@ -39,12 +48,11 @@
 
                         <div class="userPassGroup">
                             <div class=" mb-3">
-                                <input placeholder="Şifrə" type="password">
+                                <input placeholder="Şifrə" type="password" name="password">
                             </div>
                             <div class=" mb-3">
-                                <input placeholder="Təkrar şifrə" type="password">
+                                <input placeholder="Təkrar şifrə" type="password" name="repassword">
                             </div>
-
                         </div>
                     </div>
 
@@ -62,3 +70,13 @@
     </div>
 </section>
 <!-- Main Content -->
+
+@section scripts{
+    <script>
+        $(document.onload)
+        $("#devRegForm .inputBox input").keydown(function () {
+            console.log("Salam")
+            $("#devRegFormValidate").text(null).css({"display":"none"});
+        })
+    </script>    
+}
