--- a/DevForm/DevFormAz/DevFormAz/Views/Shared/_Layout.cshtml
+++ b/DevForm/DevFormAz/DevFormAz/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                             @if ((int?)Session["UserId"] != null)
                             {
                                 <li id="resProfile" class="dvBtn">
-                                    <a href="Profile.html">
+                                    <a href="/Home/Profile">
                                         Hesabım
                                         <img width="20" src="~/Public/Images/UsersFolder/ProfilePic/devAvatar.svg" alt="">
                                     </a>
@@ -102,7 +102,7 @@
                                     @if ((int?)Session["UserId"] != null)
                                     {
                                         <li id="forProfile" class="dvBtn">
-                                            <a href="/Home/UserPanel">
+                                            <a href="/Home/ProfilePage">
                                                 Hesabım
                                                 <img width="20" src="~/Public/Images/UsersFolder/ProfilePic/devAvatar.svg" alt="">
                                             </a>
