--- a/DevForm/DevFormAz/DevFormAz/Views/Home/ProfilePage.cshtml
+++ b/DevForm/DevFormAz/DevFormAz/Views/Home/ProfilePage.cshtml
@@ -182,53 +182,74 @@
                             <h2>Postlarım</h2>
                         </div>
                         <div class="mypostContent">
-                            <div class="postBox">
-                                <div class="postUserInfo">
-                                    <div class="boxOfInfo">
-                                        <div class="imageBox">
-                                            <img width="60" src="~/Public/Images/UsersFolder/ProfilePic/unnamed.jpg" alt="">
-                                        </div>
-                                        <div class="postUserName">
-                                            <p>Nurlan Hüseynov</p>
-                                            <span>27.12.2019</span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="postUserContent">
-                                    <div class="boxOfContent">
-                                        <div class="posthead">
-                                            <h4>Təcili kömək lazımdır</h4>
-                                        </div>
-                                        <div class="postContent">
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, ipsam.</p>
-                                        </div>
-                                        <div class="postreadmore">
-                                            <a href="#">Davamı</a>
-                                        </div>
-                                    </div>
+                            @foreach (var item in Model.Forms.Where(uid=>uid.UserDetailId == Model.GetUserDetail.Id))
+                            {
+                                <div class="postBox">
+                                    <div class="postUserInfo">
+                                        <div class="boxOfInfo">
+                                            <div class="imageBox">
+                                                @if (item.UserDetail.Image != null)
+                                                {
+                                                    <img width="60" src="~/Public/Images/UsersFolder/ProfilePic/@item.UserDetail.Image" alt="">
 
-                                </div>
-                                <div class="postGrades">
-                                    <div class="boxOfGrades">
-                                        <div class="gradePlus">
-                                            <h3>0</h3>
-                                        </div>
-                                        <div class="LikeDisslike">
-                                            <div class="likebtn">
-                                                <a href=""><i class="fas fa-caret-up"></i></a>
-
+                                                }
+                                                else
+                                                {
+                                                    <img width="60" src="~/Public/Images/UsersFolder/ProfilePic/devAvatar.svg" alt="">
+                                                }
                                             </div>
-                                            <div class="disslikebtn">
-                                                <a href=""><i class="fas fa-caret-down"></i></a>
+                                            <div class="postUserName">
+                                                <p>@item.UserDetail.User.FirstName @item.UserDetail.User.Lastname</p>
+                                                <span>@item.CreatedDate</span>
                                             </div>
                                         </div>
-                                        <div class="gradeMinus">
-                                            <h3>0</h3>
-                                        </div>
                                     </div>
+                                    <div class="postUserContent">
+                                        <div class="boxOfContent">
+                                            <div class="posthead">
+                                                <h4>@item.Name</h4>
+                                            </div>
+                                            <div class="postContent">
+                                                <p>@item.Description</p>
+                                            </div>
 
+                                            <div class="mb-1">
+                                                @foreach(var postTag in item.TagLists.Where(tid=>tid.FormId == item.Id))
+                                                {
+                                                    <span class="mr-1">@postTag.TagName</span>
+                                                }
+                                                    
+                                            </div>
+    
+                                                <div class="postreadmore">
+                                                <a href="#">Davamı</a>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                    <div class="postGrades">
+                                        <div class="boxOfGrades">
+                                            <div class="gradePlus">
+                                                <h3>0</h3>
+                                            </div>
+                                            <div class="LikeDisslike">
+                                                <div class="likebtn">
+                                                    <a href=""><i class="fas fa-caret-up"></i></a>
+
+                                                </div>
+                                                <div class="disslikebtn">
+                                                    <a href=""><i class="fas fa-caret-down"></i></a>
+                                                </div>
+                                            </div>
+                                            <div class="gradeMinus">
+                                                <h3>0</h3>
+                                            </div>
+                                        </div>
+
+                                    </div>
                                 </div>
-                            </div>
+
+                            }
                         </div>
                     </div>
                     <div id="mySaves" data-tab-content>
