--- a/DevForm/DevFormAz/DevFormAz/Views/Home/FormPage.cshtml
+++ b/DevForm/DevFormAz/DevFormAz/Views/Home/FormPage.cshtml
@@ -63,7 +63,7 @@
                                                     </div>
                                                 </form>
                                             </div>
-                                            
+
                                         </div>
                                     </div>
                                 </div>
@@ -77,11 +77,19 @@
                                         <div class="postUserInfo">
                                             <div class="boxOfInfo">
                                                 <div class="imageBox">
-                                                    <img width="60" src="~/Public/Images/UsersFolder/ProfilePic/@item.UserDetail.Image" alt="">
+                                                    @if (item.UserDetail.Image != null)
+                                                    {
+                                                        <img width="60" src="~/Public/Images/UsersFolder/ProfilePic/@item.UserDetail.Image" alt="">
+                                                    }
+                                                    else
+                                                    {
+                                                        <img width="60" src="~/Public/Images/UsersFolder/ProfilePic/devAvatar.svg" alt="">
+                                                    }
+
                                                 </div>
                                                 <div class="postUserName">
                                                     <p>@item.UserDetail.User.FirstName @item.UserDetail.User.Lastname</p>
-                                                    <span>@item.CreatedDate</span>
+                                                    <span>@item.CreatedDate.ToString("dd-MM-yyyy")</span>
                                                 </div>
                                             </div>
                                         </div>
@@ -94,7 +102,7 @@
                                                     <p>@item.Description</p>
                                                 </div>
                                                 <div class="mb-2">
-                                                    @foreach(var tag in Model.TagLists.Where(i=>i.FormId == item.Id))
+                                                    @foreach (var tag in Model.TagLists.Where(i => i.FormId == item.Id))
                                                     {
                                                         <span class="mr-1">@tag.TagName</span>
                                                     }
@@ -108,19 +116,19 @@
                                         <div class="postGrades">
                                             <div class="boxOfGrades">
                                                 <div class="gradePlus">
-                                                    <h3>@item.LikeCount</h3>
+                                                    <h3>@item.FormLikes.Count()</h3>
                                                 </div>
                                                 <div class="LikeDisslike">
                                                     <div class="likebtn">
-                                                        <a href=""><i class="fas fa-caret-up"></i></a>
+                                                        <span class="Like" data-id="@item.Id"><i class="fas fa-caret-up"></i></span>
 
                                                     </div>
                                                     <div class="disslikebtn">
-                                                        <a href=""><i class="fas fa-caret-down"></i></a>
+                                                        <span class="Disslike" data-id="@item.Id"><i class="fas fa-caret-down"></i></span>
                                                     </div>
                                                 </div>
                                                 <div class="gradeMinus">
-                                                    <h3>@item.DisslikeCount</h3>
+                                                    <h3>@item.FormDisslikes.Count()</h3>
                                                 </div>
                                             </div>
 
@@ -170,11 +178,64 @@
 
 
 @section scripts{
-       <script>
-           $("#sharebtn").click(function () {
-               console.log("salam");
+    <script>
+        $(document).ready(function () {
+              
+            $(document).on("click", ".Like", function () {
+                var id = $(this).attr("data-id");
+                var currentcount = $(this).parent().parent().prev();
+                var isLiked = false;
+                var likeCount = currentcount.children()[0];
+
+                if (!isLiked) {
+                    $.ajax({
+                        url: '/Home/AddLike?id=' + id,
+                        type: 'Get',
+                        success: function (res) {
+                            likeCount.innerHTML = res;
+                        }
+                    });
+                }
+                else {
+                    $.ajax({
+                        url: '/Home/RemoveLike?id=' + id,
+                        type: 'Get',
+                        success: function (res) {
+                            likeCount.innerHTML = res;
+                        }
+                    });
+                }
+            });
+            $(document).on("click", ".Disslike", function () {
+                var id = $(this).attr("data-id");
+                var currentcount = $(this).parent().parent().next();
                 
-           })
-          
-       </script>
+                var isDissLiked = false;
+                var disslikecount = currentcount.children()[0];
+
+                if (!isDissLiked) {
+                    $.ajax({
+                        url: '/Home/AddDisslike?id=' + id,
+                        type: 'Get',
+                        success: function (resDisslike) {
+                            disslikecount.innerHTML = resDisslike;
+                        }
+                    });
+                }
+                else {
+                    $.ajax({
+                        url: '/Home/RemoveDisslike?id=' + id,
+                        type: 'Get',
+                        success: function (resDisslike) {
+                            disslikecount.innerHTML = resDisslike;
+                        }
+                    });
+                }
+            });
+
+
+        })
+
+
+    </script>
 }
