added new updates need to change formviewpage tag

--- a/DevForm/DevFormAz/DevFormAz/Views/Home/FormPage.cshtml
+++ b/DevForm/DevFormAz/DevFormAz/Views/Home/FormPage.cshtml
@@ -120,7 +120,7 @@
                                                 </div>
                                                 <div class="viewLikeCount">
                                                     <div class="viewCount">
-                                                        <span class="view">0</span>
+                                                        <span class="view">@item.FormViewCounts.Count()</span>
 
                                                     </div>
                                                     <div class="likeCount">
