--- a/DevForm/DevFormAz/DevFormAz/Views/Home/FormView.cshtml
+++ b/DevForm/DevFormAz/DevFormAz/Views/Home/FormView.cshtml
@@ -29,38 +29,105 @@
 
 
                 <!-- ReadForm -->
-                <div class="col-md-12 col-lg-8 col-12 col-sm-12 mt-4">
+                <div class="col-md-12 col-lg-8 col-12 col-sm-12 mt-4 readformMainBox">
                     <div class="readForm">
+                        <div class="sharedUser mb-3">
+                            <div class="userInfoDiv">
+                                <div class="userImg mr-3">
+                                    @if (Model.UserDetail.Image != null)
+                                    {
+                                        <img width="50" src="~/Public/Images/UsersFolder/ProfilePic/@Model.UserDetail.Image" />
+                                    }
+                                    else
+                                    {
+                                        <img width="50" src="~/Public/Images/UsersFolder/ProfilePic/devAvatar.svg" />
+                                    }
+
+                                </div>
+                                <div class="userInfo">
+                                    <div class="userName">
+                                        <h5>@Model.UserDetail.User.FirstName @Model.UserDetail.User.Lastname</h5>
+                                    </div>
+                                    <div class="sharedTime">
+                                        <span>@Model.CreatedDate.ToString("dd-MM-yyyy")</span>
+                                    </div>
+                                    <div class="userPopulation">
+                                        <div class="sharedPostCount">
+                                            <a href=""><i class="fas fa-bullhorn mr-2"></i>0</a>
+                                        </div>
+                                        <div class="userFollowers ">
+                                            <a href=""><i class="fas fa-users mr-2"></i>0</a>
+                                        </div>
+                                        <div class="userFollows">
+                                            <a href=""><i class="fas fa-user mr-2"></i>0</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="postInfoDiv">
+                                <div class="viewLikeCount mb-2 mt-2">
+                                    <div class="viewIconCount">
+                                        <div class="viewIcon mr-1">
+                                            <i class="far fa-eye"></i>
+                                        </div>
+                                        <div class="viewCount">@Model.FormViewCounts.Count()</div>
+                                    </div>
+                                    <div class="likeIconCount">
+                                        <div class="likeIcon mr-1">
+                                            @if (Model.FormLikes.Count() != 0)
+                                            {
+                                                <i class="fas fa-heart likeHeart" style="color:red;"></i>
+                                            }
+                                            else
+                                            {
+                                                <i class="far fa-heart"></i>
+                                            }
+                                        </div>
+                                        <div class="likeCount">@Model.FormLikes.Count()</div>
+                                    </div>
+                                </div>
+                            </div>
+                           
+                        </div>
+                        <hr />
                         <div class="FormHeaderDesc mb-2">
                             <div class="formHead">
-                                <h2>Problem bashliqi</h2>
+                                <h2>@Model.Name</h2>
+                            </div>
+                            <div class="tagsBox mb-2 mt-2">
+                                @foreach (var item in Model.TagLists.Where(u => u.FormId == Model.Id))
+                                {
+                                    <span class="tags">@item.TagName</span>
+                                }
                             </div>
                             <div class="formDesc">
-                                <p>etrafli melumati</p>
+                                <p>
+                                    @Model.Description
+                                </p>
                             </div>
+                            <div id="errorImg" class="imgBox">
+                                <img class="errimgClick" width="200" src="~/Public/Images/PostImgs/Capture.png" />
+                                <img class="errimgClick" width="200" src="~/Public/Images/PostImgs/Capture.png" />
+                                <img class="errimgClick" width="200" src="~/Public/Images/PostImgs/Capture.png" />
+                                <img class="errimgClick" width="200" src="~/Public/Images/PostImgs/Capture.png" />
+                            </div>
+
                         </div>
-                        
-                        <div class="viewLikeCount">
-                            <div class="viewIconCount">
-                                <div class="viewIcon">
-                                    <i class="far fa-eye"></i>
+
+                       <hr/>
+                        <div class="commentBox">
+                           
+                            <form id="shareComment">
+                                <div class="cmtBoxInput">
+                                    <input type="text" class="form-control" />
+                                    <input id="sendCmt" type="button" class="btn btn-success ml-2" value="Gonder" />
                                 </div>
-                                <div class="viewCount">0</div>
-                            </div>
-                            <div class="likeIconCount">
-                                <div class="likeIcon">
-                                    <i class="far fa-heart"></i>
-                                </div>
-                                <div class="likeCount">0</div>
-                            </div>
+                            </form>
+                           
                         </div>
                     </div>
                 </div>
                 <!-- End ReadForm -->
-
-
-
-
                 <!-- Rightside -->
                 <div class="col-md-12 col-lg-2 col-12 col-sm-12">
                     <div class="tagsUsers">
@@ -85,3 +152,25 @@
     </div>
 </section>
 <!-- Main Content -->
+
+@section scripts{
+    <script>
+        var clickedImg = false;
+        $("#errorImg img").click(function () {
+
+            if (clickedImg == false) {
+                clickedImg = true;
+                $(this)[0].style.transform = "scale(5)";
+                 $(this)[0].style.zIndex = "5";
+                console.log(clickedImg)
+
+            } else{
+                clickedImg = false;
+                $(this)[0].style.transform = "scale(1)";
+                $(this)[0].style.zIndex = "0";
+                console.log(clickedImg)
+
+            }
+        })
+    </script>    
+}
